--- a/example1.html
+++ b/example1.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital@1&display=swap" rel="stylesheet">
     <style>
         body {
-            background-image: url("file:///D:/anniversary/momdadanni/mom%20and%20dad.JPG");
+            background-image: url("file:///D:/anniversary/momdadanni/mom%20and%20dad.png");
             background-size: cover;
             /* border: 2px solid black; */
         }
